--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,9 +1,5 @@
-:root {
 
-    --font-heading: 'Plus Jakarta Sans', sans-serif;
 
-    --font-body: 'Inter', sans-serif;
-}
 *{
   margin: 0;
   padding: 0;
@@ -52,12 +48,31 @@ padding: 0.9rem;
     height: auto;
     width: 300px;
 }
-
-.form-download input{
+.input-container button:hover{
+  color: #f0ffff;
+}
+.input-container:has(input:focus) {
+    border-color: #f0ffff; /* Warna outline saat mengetik */
+    box-shadow: 0 0 5px rgba(255,255,255,0.502); /* Efek glow */
+}
+.input-container button{
+  background-color: transparent;
+  border: none;
+  color: #a1a1a1;
+}
+.input-container input{
+  background-color: transparent;
+  color: #f0ffff;
+  border: none;
+  outline: none;
+}
+.input-container {
   width: 100%;
   padding: 0.4rem;
   border-radius: 0;
   margin: 0.5rem 0;
+  display: flex;
+  justify-content: space-between;
   background: rgba(255, 255, 255, 0.1);
 
     backdrop-filter: blur(1px);
@@ -65,8 +80,10 @@ padding: 0.9rem;
     border: 1px solid rgba(255, 255, 255, 0.2);
     color: #fff;
     font-weight: 500;  
+    transition: border-color 0.3s ease-in-out;
+
 }
-.form-download input::placeholder {
+.form-download .input-container input::placeholder {
     color: rgba(255, 255, 255, 0.5);
     font-weight: 400;
 }
@@ -114,7 +131,7 @@ box-shadow: 0 6px 20px rgba(79, 70, 229, 0.4);
   flex-direction: column;
   grid-area: information;
   justify-content: start;
-  gap: 1rem;
+  gap:0.5rem;
   align-items: center;
   font-size: 1.5rem;
   background-color: ;
@@ -124,10 +141,17 @@ ul,li,a{
   list-style: none;
   outline: none;
 }
+.hastag{
+  grid-area: hastag;
+  font-weight:400;
+  font-size: 0.8rem;
+  margin: 0;
+}
 .caption{
   grid-area: caption;
   font-weight:400;
   font-size: 0.8rem;
+  margin: 0;
 }
 .nickname{
   margin: 0.2rem 0;
@@ -162,15 +186,16 @@ img{
   grid-area: btn;
 }
 .output{
-  display: grid;
+  display: none;
   grid-template-areas:
   'coverImg coverImg coverImg coverImg coverImg information'
   'nickname nickname nickname nickname nickname nickname'
   'caption caption caption caption caption caption'
+  'hastag hastag hastag hastag hastag hastag' 
   'loading loading loading loading loading loading'
   'btn btn btn btn btn btn';
   background: rgba(255, 255, 255, 0.05);
-  margin-top: 10px;
+  margin-top: 5px;
 
 border-radius: 8px;
 
@@ -235,9 +260,14 @@ ul {
   list-style: none;
 }
 .loading{
+  
   margin: auto;
   display:none ;
   grid-area: loading;
+}
+.loading ul{
+  padding: 0;
+  margin: auto;
 }
 .text {
   
@@ -270,4 +300,16 @@ ul {
   100% {
     content: "Loading...";
   }
+}
+.anton-fm{
+  font-family: "Anton", Sans-Serif;
+  font-weight: 400;
+}
+.header{
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  letter-spacing: 1px;
+}
+.description{
+  color: #e2e8f0;
+text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
